@@ -519,3 +519,4 @@ extern struct re_pattern_buffer *PATTBUFFER;
 
 
 extern char *CF_DIGEST_TYPES[4][2];
+extern int CF_DIGEST_SIZES[4];
